fixed breadcrumbs, fixed responsive design

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li class="nav2-item"><a href="https://www.britannica.com/">Home</a></li>
             <li class="nav2-item"><a href="https://www.britannica.com/browse/Science">Science</a></li>
             <li class="nav2-item"><a href="https://www.britannica.com/browse/Mathematics">Mathematics</a></li>
-            <li class="nav2-item active" aria-current="page">Tim Berners-Lee</li>
+            <li class="nav2-item active" aria-current="page"></li>
         </ol>
     </nav>
     
