--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     History</a></p>
         </header>
 
-        <header class="content-wrapper">
+        <section class="content">
             <!-- Article -->
             <article>
                 <p>
@@ -90,9 +90,9 @@
                     <a href="https://www.britannica.com/place/Geneva-Switzerland">Geneva</a>.
                 </p>
             </article>
-
-            <!-- Cards -->
-            <aside class="cardsofarticles">
+        </section>
+            <!-- Card -->
+            <aside class="profil">
                 <article class="card">
                     <header>
                         <img src="./images/British-scientist-Tim-Berners-Lee.webp" alt="Tim Berners-Lee">
@@ -108,7 +108,7 @@
 
                 </article>
             </aside>
-        </header>
+        
     </main>
 </body>
 
