derniere modif du code css tentative aside

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 
 
     <!-- Main Content Section -->
-    <main>
+    <container>
         <!-- Article Header -->
+        <menu>
         <header>
             <h1>Tim Berners-Lee</h1>
             <h3>British Scientist</h3>
@@ -59,57 +60,57 @@
 
         <section class="content">
             <!-- Article -->
-            <article>
-                <p>
-                    <strong>Tim Berners-Lee</strong>, <strong></strong>In full <strong>Sir Tim Berners-Lee,
-                    </strong>(born June 8, 1955, <a href="https://www.britannica.com/place/London"> London </a>,
-                    England),
-                    <a href="https://www.britannica.com/place/Great-Britain-island-Europe"> British </a> <a
+                    <article>
+                        <p>
+                        <strong>Tim Berners-Lee</strong>, <strong></strong>In full <strong>Sir Tim Berners-Lee,
+                        </strong>(born June 8, 1955, <a href="https://www.britannica.com/place/London"> London </a>,
+                        England),
+                        <a href="https://www.britannica.com/place/Great-Britain-island-Europe"> British </a> <a
                         href="https://www.britannica.com/science/computer-science"> computer scientist </a>, generally
-                    credited as the
-                    <a href="https://www.britannica.com/topic/inventor">inventor</a> of the <a
+                        credited as the
+                        <a href="https://www.britannica.com/topic/inventor">inventor</a> of the <a
                         href="https://www.britannica.com/topic/World-Wide-Web">World Wide Web</a>. In 2004, he was
-                    awarded
-                    a knighthood by <a href="https://www.britannica.com/biography/Elizabeth-II">Queen Elizabeth II</a>
-                    of the <a href="https://www.britannica.com/place/United-Kingdom">United Kingdom</a>
-                    and the inaugural Millennium Technology Prize (€1 million) by the Finnish Technology Award
-                    Foundation. Computing came
-                    naturally to Berners-Lee, as both of his parents worked on the <a
+                        awarded
+                        a knighthood by <a href="https://www.britannica.com/biography/Elizabeth-II">Queen Elizabeth II</a>
+                        of the <a href="https://www.britannica.com/place/United-Kingdom">United Kingdom</a>
+                        and the inaugural Millennium Technology Prize (€1 million) by the Finnish Technology Award
+                        Foundation. Computing came
+                        naturally to Berners-Lee, as both of his parents worked on the <a
                         href="https://www.britannica.com/technology/Ferranti-Mark-I">Ferranti</a> Mark I, the first
-                    commercial computer. (See <a
+                        commercial computer. (See <a
                         href="https://www.britannica.com/technology/computer/ENIAC#ref216048">computer: The first
                         stored-program machines</a>.) After graduating in 1976
-                    from the <a href="https://www.britannica.com/topic/University-of-Oxford">University of Oxford</a>,
-                    Berners-Lee designed computer software for two years at Plessey
-                    Telecommunications Ltd., located in <a href="https://www.britannica.com/place/Poole">Poole</a>,
-                    Dorset, <a href="https://www.britannica.com/place/England">England</a>. Following this, he had
-                    several
-                    positions in the computer industry, including a stint from June to December 1980 as a software
-                    engineering consultant at <a href="">CERN</a>, the European <a
+                        from the <a href="https://www.britannica.com/topic/University-of-Oxford">University of Oxford</a>,
+                        Berners-Lee designed computer software for two years at Plessey
+                        Telecommunications Ltd., located in <a href="https://www.britannica.com/place/Poole">Poole</a>,
+                        Dorset, <a href="https://www.britannica.com/place/England">England</a>. Following this, he had
+                        several
+                        positions in the computer industry, including a stint from June to December 1980 as a software
+                        engineering consultant at <a href="">CERN</a>, the European <a
                         href="https://www.britannica.com/science/particle-physics">particle physics</a> laboratory in
-                    <a href="https://www.britannica.com/place/Geneva-Switzerland">Geneva</a>.
+                        <a href="https://www.britannica.com/place/Geneva-Switzerland">Geneva</a>.
                 </p>
             </article>
         </section>
-            <!-- Card -->
-            <aside class="profil">
-                <article class="card">
-                    <header>
-                        <img src="./images/British-scientist-Tim-Berners-Lee.webp" alt="Tim Berners-Lee">
-                        <p>Tim Berners-Lee</p>
-                        <button class="btn btn-primary"><strong>See All Media</strong></button>
-                    </header>
-                    <p><strong>Born:</strong> June 8, 1955 (age 67) · London · England</p>
-                    <p><strong>Founder:</strong> World Wide Web Consortium</p>
-                    <p><strong>Inventions:</strong> <a href="https://www.britannica.com/topic/World-Wide-Web"> World
+                <aside>
+                    <article class="card">
+                        <header>
+                            <img src="./images/British-scientist-Tim-Berners-Lee.webp" alt="Tim Berners-Lee">
+                            <p>Tim Berners-Lee</p>
+                            <button class="btn btn-primary"><strong>See All Media</strong></button>
+                        </header>
+                        <p><strong>Born:</strong> June 8, 1955 (age 67) · London · England</p>
+                        <p><strong>Founder:</strong> World Wide Web Consortium</p>
+                        <p><strong>Inventions:</strong> <a href="https://www.britannica.com/topic/World-Wide-Web"> World
                             Wide Web </a> · <a href="https://www.britannica.com/topic/World-Wide-Web"> World Wide Web
-                    </p>
-                    <button class="btn btn-primary"><strong>See all related content →</strong></button>
+                        </p>
+                        <button class="btn btn-primary"><strong>See all related content →</strong></button>
 
-                </article>
-            </aside>
-        
-    </main>
+                    </article>
+                </aside>
+        </section>
+    </container>
+    
 </body>
 
 </html>
